mobile overflow x fix

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 .mobile-wrapper {
   overflow-x: hidden;
+  width: 100%;
 }
 
 body {
